--- a/loseIfYouSerious1/end.html
+++ b/loseIfYouSerious1/end.html
@@ -14,7 +14,7 @@
 <a href="./index.html">
 <H1 align="center">點這裡回到首頁</H1>
 <BR>
-<a href="https://riyntdypfmgq5f8zfnfxiq-on.drv.tw/DaPunBear_Web/2%E8%AA%8D%E7%9C%9F%E4%BD%A0%E5%B0%B1%E8%BC%B8%E4%BA%86.html">
+<a href="https://micr0dust.github.io/lose-If-You-Serious/loseIfYouSerious2/2_1hthjfcj.html">
 <H1 align="center">點這裡到版本2</H1>
 <img src="./img/nJTakx.jpg
 
